; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp4xx/extr_goramo_mlr.c_hss_set_clock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp4xx/extr_goramo_mlr.c_hss_set_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONTROL_HSS1_CLK_INT = common dso_local global i32 0, align 4
@CONTROL_HSS0_CLK_INT = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @hss_set_clock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hss_set_clock(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @CONTROL_HSS1_CLK_INT, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @CONTROL_HSS0_CLK_INT, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %5, align 4
  switch i32 %15, label %24 [
    i32 130, label %16
    i32 129, label %16
    i32 128, label %20
  ]

16:                                               ; preds = %13, %13
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @set_control(i32 %17, i32 0)
  %19 = call i32 (...) @output_control()
  store i32 129, i32* %3, align 4
  br label %27

20:                                               ; preds = %13
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @set_control(i32 %21, i32 1)
  %23 = call i32 (...) @output_control()
  store i32 128, i32* %3, align 4
  br label %27

24:                                               ; preds = %13
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %24, %20, %16
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @set_control(i32, i32) #1

declare dso_local i32 @output_control(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
